--- a/index.html
+++ b/index.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+  </head>
+  <body>
+    <!--Шапка (навігатор)-->
+    <header>
+      <nav>
+        <!--Логотип-->
+        <a href="/index.html">WebStudio</a>
+
+        <!--Навігація-->
+        <ul>
+          <li>
+            <a href="/studio.html">Студия</a>
+          </li>
+          <li>
+            <a href="/portfolio.html">Портфолио</a>
+          </li>
+          <li>
+            <a href="/contacts.html">Контакты</a>
+          </li>
+        </ul>
+
+        <!--Активні посилання на контаки-->
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Баннер -->
+    <section>
+      <h1>Эффективные решения<br />для вашего бизнеса</h1>
+      <a href="">Заказать услугу</a>
+    </section>
+
+    <!-- Наші цілі та переваги -->
+    <section>
+      <h2>Наші цілі та переваги</h2>
+      <ul>
+        <!--Внимание к деталям-->
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <!--Пунктуальность-->
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <!--Планирование-->
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
+        </li>
+        <!--Современные технологии-->
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <!--Наша робота-->
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <a href="https://www.google.com/">
+            <img src="/image/our working 1.svg" width="370" height="294" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://about.google/?utm_source=google-UA&utm_medium=referral&utm_campaign=hp-footer&fg=1"
+          >
+            <img src="/image/our working 2.svg" width="370" height="294" />
+          </a>
+        </li>
+        <li>
+          <a href="https://about.google/products/">
+            <img src="/image/our working 3.svg" width="370" height="294" />
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <!--Наша команда-->
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <!--Игорь Демьяненко-->
+          <a href="https://www.facebook.com/profile.php?id=100017404060093">
+            <img src="/image/Igor Demyanenko.svg" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </a>
+          <!--Ольга Репина-->
+          <a href="https://www.facebook.com/profile.php?id=100010853467044">
+            <img src="/image/Olha Repina.svg" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </a>
+          <!--Николай Тарасов-->
+          <a href="https://www.facebook.com/profile.php?id=100012960483008">
+            <img src="/image/Nikolay Tarasov.svg" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </a>
+          <!--Михаил Ермаков-->
+          <a href="https://www.facebook.com/profile.php?id=100002098032545">
+            <img src="/image/Michail Ermakov.svg" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <!--Футер-->
+    <footer>
+      <!--Логотип-->
+      <a href="/index.html">WebStudio</a>
+
+      <!--Адреса та контакти-->
+
+      <ul>
+        <li>
+          <address>г. Киев, пр-т Леси Украинки, 26</address>
+        </li>
+        <li>
+          <a href="mailto:info@example.com">info@example.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
