Виправлення після валідатора
Виправлення імен зображень.
До img добавив alt

--- a/index.html
+++ b/index.html
@@ -89,19 +89,34 @@
       <ul>
         <li>
           <a href="https://www.google.com/">
-            <img src="/image/our working 1.svg" width="370" height="294" />
+            <img
+              src="/image/our_working_1.svg"
+              width="370"
+              height="294"
+              alt="Фото першої роботи"
+            />
           </a>
         </li>
         <li>
           <a
             href="https://about.google/?utm_source=google-UA&utm_medium=referral&utm_campaign=hp-footer&fg=1"
           >
-            <img src="/image/our working 2.svg" width="370" height="294" />
+            <img
+              src="/image/our_working_2.svg"
+              width="370"
+              height="294"
+              alt="Фото другої роботи"
+            />
           </a>
         </li>
         <li>
           <a href="https://about.google/products/">
-            <img src="/image/our working 3.svg" width="370" height="294" />
+            <img
+              src="/image/our_working_3.svg"
+              width="370"
+              height="294"
+              alt="Фото третьої роботи"
+            />
           </a>
         </li>
       </ul>
@@ -114,25 +129,45 @@
         <li>
           <!--Игорь Демьяненко-->
           <a href="https://www.facebook.com/profile.php?id=100017404060093">
-            <img src="/image/Igor Demyanenko.svg" />
+            <img
+              src="/image/Igor_Demyanenko.svg"
+              width="270"
+              height="260"
+              alt="Фото Игорь Демьяненко"
+            />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </a>
           <!--Ольга Репина-->
           <a href="https://www.facebook.com/profile.php?id=100010853467044">
-            <img src="/image/Olha Repina.svg" />
+            <img
+              src="/image/Olha_Repina.svg"
+              width="270"
+              height="260"
+              alt="Фото Ольга Репина"
+            />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </a>
           <!--Николай Тарасов-->
           <a href="https://www.facebook.com/profile.php?id=100012960483008">
-            <img src="/image/Nikolay Tarasov.svg" />
+            <img
+              src="/image/Nikolay_Tarasov.svg"
+              width="270"
+              height="260"
+              alt="Фото Николай Тарасов"
+            />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </a>
           <!--Михаил Ермаков-->
           <a href="https://www.facebook.com/profile.php?id=100002098032545">
-            <img src="/image/Michail Ermakov.svg" />
+            <img
+              src="/image/Michail_Ermakov.svg"
+              width="270"
+              height="260"
+              alt="Фото Михаил Ермаков"
+            />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </a>
