--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
             <a href="/contacts.html">Контакты</a>
           </li>
         </ul>
-
-        <!--Активні посилання на контаки-->
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
       </nav>
+
+      <!--Активні посилання на контаки-->
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
 
     <!-- Баннер -->
     <section>
       <h1>Эффективные решения<br />для вашего бизнеса</h1>
-      <a href="">Заказать услугу</a>
+      <button type="button">Заказать услугу</button>
     </section>
 
     <!-- Наші цілі та переваги -->
@@ -90,7 +90,7 @@
         <li>
           <a href="https://www.google.com/">
             <img
-              src="/image/our_working_1.svg"
+              src="/image/our_working_1.jpg"
               width="370"
               height="294"
               alt="Фото першої роботи"
@@ -102,7 +102,7 @@
             href="https://about.google/?utm_source=google-UA&utm_medium=referral&utm_campaign=hp-footer&fg=1"
           >
             <img
-              src="/image/our_working_2.svg"
+              src="/image/our_working_2.jpg"
               width="370"
               height="294"
               alt="Фото другої роботи"
@@ -112,7 +112,7 @@
         <li>
           <a href="https://about.google/products/">
             <img
-              src="/image/our_working_3.svg"
+              src="/image/our_working_3.jpg"
               width="370"
               height="294"
               alt="Фото третьої роботи"
@@ -130,7 +130,7 @@
           <!--Игорь Демьяненко-->
           <a href="https://www.facebook.com/profile.php?id=100017404060093">
             <img
-              src="/image/Igor_Demyanenko.svg"
+              src="/image/Igor_Demyanenko.jpg"
               width="270"
               height="260"
               alt="Фото Игорь Демьяненко"
@@ -141,7 +141,7 @@
           <!--Ольга Репина-->
           <a href="https://www.facebook.com/profile.php?id=100010853467044">
             <img
-              src="/image/Olha_Repina.svg"
+              src="/image/Olha_Repina.jpg"
               width="270"
               height="260"
               alt="Фото Ольга Репина"
@@ -152,7 +152,7 @@
           <!--Николай Тарасов-->
           <a href="https://www.facebook.com/profile.php?id=100012960483008">
             <img
-              src="/image/Nikolay_Tarasov.svg"
+              src="/image/Nikolay_Tarasov.jpg"
               width="270"
               height="260"
               alt="Фото Николай Тарасов"
@@ -163,7 +163,7 @@
           <!--Михаил Ермаков-->
           <a href="https://www.facebook.com/profile.php?id=100002098032545">
             <img
-              src="/image/Michail_Ermakov.svg"
+              src="/image/Michail_Ermakov.jpg"
               width="270"
               height="260"
               alt="Фото Михаил Ермаков"
