--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <header>
       <nav>
         <!--Логотип-->
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
 
         <!--Навігація-->
         <ul>
           <li>
-            <a href="/studio.html">Студия</a>
+            <a href="./studio.html">Студия</a>
           </li>
           <li>
-            <a href="/portfolio.html">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="/contacts.html">Контакты</a>
+            <a href="./contacts.html">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -90,7 +90,7 @@
         <li>
           <a href="https://www.google.com/">
             <img
-              src="/image/our_working_1.jpg"
+              src="./image/our_working_1.jpg"
               width="370"
               height="294"
               alt="Фото першої роботи"
@@ -102,7 +102,7 @@
             href="https://about.google/?utm_source=google-UA&utm_medium=referral&utm_campaign=hp-footer&fg=1"
           >
             <img
-              src="/image/our_working_2.jpg"
+              src="./image/our_working_2.jpg"
               width="370"
               height="294"
               alt="Фото другої роботи"
@@ -112,7 +112,7 @@
         <li>
           <a href="https://about.google/products/">
             <img
-              src="/image/our_working_3.jpg"
+              src="./image/our_working_3.jpg"
               width="370"
               height="294"
               alt="Фото третьої роботи"
@@ -130,7 +130,7 @@
           <!--Игорь Демьяненко-->
           <a href="https://www.facebook.com/profile.php?id=100017404060093">
             <img
-              src="/image/Igor_Demyanenko.jpg"
+              src="./image/Igor_Demyanenko.jpg"
               width="270"
               height="260"
               alt="Фото Игорь Демьяненко"
@@ -141,7 +141,7 @@
           <!--Ольга Репина-->
           <a href="https://www.facebook.com/profile.php?id=100010853467044">
             <img
-              src="/image/Olha_Repina.jpg"
+              src="./image/Olha_Repina.jpg"
               width="270"
               height="260"
               alt="Фото Ольга Репина"
@@ -152,7 +152,7 @@
           <!--Николай Тарасов-->
           <a href="https://www.facebook.com/profile.php?id=100012960483008">
             <img
-              src="/image/Nikolay_Tarasov.jpg"
+              src="./image/Nikolay_Tarasov.jpg"
               width="270"
               height="260"
               alt="Фото Николай Тарасов"
@@ -163,7 +163,7 @@
           <!--Михаил Ермаков-->
           <a href="https://www.facebook.com/profile.php?id=100002098032545">
             <img
-              src="/image/Michail_Ermakov.jpg"
+              src="./image/Michail_Ermakov.jpg"
               width="270"
               height="260"
               alt="Фото Михаил Ермаков"
@@ -178,7 +178,7 @@
     <!--Футер-->
     <footer>
       <!--Логотип-->
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
 
       <!--Адреса та контакти-->
 
