Revert "Зміна контакти"
This reverts commit 7e426612e384ac918ff9499414e0d587a9ceb7f4.

--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <title>Контакты</title>
   </head>
   <body>
-    <!--Шапка (навігатор)-->
+<!--Шапка (навігатор)-->
     <header>
       <nav>
         <a href="/index.html">
@@ -36,6 +36,6 @@
       </nav>
     </header>
 
-    <p>---Контакты---</p>
+    <p>Контакты</p>
   </body>
 </html>
