--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="./portfolio.html">Контакты</a>
+            <a href="./contacts.html">Контакты</a>
           </li>
         </ul>
       </nav>
