--- a/portfolio.html
+++ b/portfolio.html
@@ -7,35 +7,36 @@
     <title>Портфолио</title>
   </head>
   <body>
-<!--Шапка (навігатор)-->
+    <!--Шапка (навігатор)-->
     <header>
       <nav>
-        <a href="/index.html">
-          <p>WebStudio</p>
-        </a>
+        <!--Логотип-->
+        <a href="./index.html">WebStudio</a>
 
+        <!--Навігація-->
         <ul>
           <li>
-            <a href="/studio.html">Студия</a>
+            <a href="./studio.html">Студия</a>
           </li>
           <li>
-            <a href="/portfolio.html">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="/contacts.html">Контакты</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="./contacts.html">Контакты</a>
           </li>
         </ul>
       </nav>
-    </header>
 
+      <!--Активні посилання на контаки-->
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
 
     <p>Портфолио</p>
   </body>
